[package]
name = "rift"
version = "0.1.0"
edition = "2024"
description = "Fast SSA-based RiscV lifter"
license-file = "COPYING.md"

[dependencies]
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
paste = "1.0.15"
portal-pc-asm-common = { version = "0.1.0", features = ["alloc"] }
portal-pc-waffle = {version="^0.5.5",git="https://github.com/portal-co/waffle-.git",branch="portal"}
rv-asm = {version="^0.2.1",git = "https://github.com/portal-co/rv-utils.git",branch = "main"}

[dev-dependencies]
bitvec = "1.0.1"
object = { version = "0.36.0", default-features = false, features = ["read", "elf"] }
